--- a/.classpath
+++ b/.classpath
@@ -1,61 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="com/venzee/jxcm/" kind="src"
-		path="src" />
-	<classpathentry kind="con"
-		path="org.eclipse.jdt.launching.JRE_CONTAINER" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/spring-aop-3.2.1.RELEASE.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/spring-beans-3.2.1.RELEASE.jar"
-		sourcepath="F:/Lib/spring-framework-3.2.1.RELEASE/libs/spring-beans-3.2.1.RELEASE-sources.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/spring-context-3.2.1.RELEASE.jar"
-		sourcepath="F:/Lib/spring-framework-3.2.1.RELEASE/libs/spring-context-3.2.1.RELEASE-sources.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/spring-context-support-3.2.1.RELEASE.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/spring-core-3.2.1.RELEASE.jar"
-		sourcepath="F:/Lib/spring-framework-3.2.1.RELEASE/libs/spring-core-3.2.1.RELEASE-sources.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/spring-expression-3.2.1.RELEASE.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/spring-jdbc-3.2.1.RELEASE.jar"
-		sourcepath="F:/Lib/spring-framework-3.2.1.RELEASE/libs/spring-jdbc-3.2.1.RELEASE-sources.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/spring-orm-3.2.1.RELEASE.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/spring-oxm-3.2.1.RELEASE.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/spring-tx-3.2.1.RELEASE.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/spring-web-3.2.1.RELEASE.jar"
-		sourcepath="F:/Lib/spring-framework-3.2.1.RELEASE/libs/spring-web-3.2.1.RELEASE-sources.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/spring-webmvc-3.2.1.RELEASE.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/commons-io-2.4.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/commons-logging-1.1.1.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/log4j-1.2.17.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/dom4j-1.6.1.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/freemarker.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.24-bin.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/fastjson-1.1.28.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/druid-0.2.15.jar" />
-	<classpathentry kind="lib"
-		path="WebContent/WEB-INF/lib/commons-fileupload-1.3.jar" />
-	<classpathentry kind="con"
-		path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v6.0">
+	<classpathentry excluding="com/venzee/jxcm/" kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-aop-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-beans-3.2.1.RELEASE.jar" sourcepath="F:/Lib/spring-framework-3.2.1.RELEASE/libs/spring-beans-3.2.1.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-context-3.2.1.RELEASE.jar" sourcepath="F:/Lib/spring-framework-3.2.1.RELEASE/libs/spring-context-3.2.1.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-context-support-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-core-3.2.1.RELEASE.jar" sourcepath="F:/Lib/spring-framework-3.2.1.RELEASE/libs/spring-core-3.2.1.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-expression-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-jdbc-3.2.1.RELEASE.jar" sourcepath="F:/Lib/spring-framework-3.2.1.RELEASE/libs/spring-jdbc-3.2.1.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-orm-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-oxm-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-tx-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-web-3.2.1.RELEASE.jar" sourcepath="F:/Lib/spring-framework-3.2.1.RELEASE/libs/spring-web-3.2.1.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-webmvc-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/freemarker.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.24-bin.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/fastjson-1.1.28.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/druid-0.2.15.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-fileupload-1.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/pinyin4j-2.5.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v6.0">
 		<attributes>
-			<attribute name="owner.project.facets" value="jst.web" />
+			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="output" path="build/classes" />
+	<classpathentry kind="output" path="build/classes"/>
 </classpath>
