--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>pss</groupId>
+	<groupId>net.dlhz</groupId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>test Maven Webapp</name>
+	<name>psi</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<dependency>
@@ -73,5 +73,5 @@
 	<build>
 		<finalName>test</finalName>
 	</build>
-	<artifactId>pss</artifactId>
+	<artifactId>psi</artifactId>
 </project>
