--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,17 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>3.2.3.RELEASE</version>
+			<version>3.2.4.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>3.2.4.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>3.2.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.belerweb</groupId>
@@ -31,12 +41,12 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
-			<version>0.2.22</version>
+			<version>0.2.25</version>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
-			<version>1.1.34</version>
+			<version>1.1.35</version>
 		</dependency>
 		<dependency>
 			<groupId>org.freemarker</groupId>
@@ -54,11 +64,6 @@
 			<version>2.4</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-			<version>3.2.3.RELEASE</version>
-		</dependency>
-		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
@@ -71,7 +76,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>test</finalName>
+		<finalName>psi</finalName>
 	</build>
 	<artifactId>psi</artifactId>
 </project>
