--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
 			<artifactId>thumbnailator</artifactId>
 			<version>0.4.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-spring</artifactId>
+			<version>1.2.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>psi</finalName>
